Fix surefire-plugin